<resources>
    <string name="app_name">caraoucoroa</string>

    <!--SPLASH-->
    <string name="loading">Carregando...</string>
    <string name="email_dev">Lucasricardo28@gmail.com</string>

    <!--HOME-->
    <string name="tutorial_1">Clique em sortear \n para tirar\n cara ou coroa</string>

    <string name="name_right">Cara ou Coroa</string>
    <string name="name_lottery">O lado sorteado foi:</string>

    <string name="text_example">...</string>
    
    <string name="back">Voltar</string>
</resources>
