<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LotteryActivity"
    android:background="@mipmap/bg_total"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_right"
                android:textSize="40sp"
                android:textColor="@android:color/background_light"
                android:textAlignment="center"
                android:fontFamily="@font/bitter_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_lottery"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:textAlignment="center"
                android:fontFamily="@font/bitter_bold"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bitter_bold"
                android:text="@string/text_example"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selected"
                android:text="@string/back"
                android:textColor="@android:color/background_light"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>